--- a/builder-course/ts/package.json
+++ b/builder-course/ts/package.json
@@ -27,13 +27,13 @@
     "vault_close": "ts-node ./cluster1/vault_close.ts"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.29.0",
+    "@coral-xyz/anchor": "0.30.1",
     "@metaplex-foundation/mpl-token-metadata": "3.1.1",
-    "@metaplex-foundation/umi": "^0.8.10",
+    "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.8.10",
-    "@metaplex-foundation/umi-uploader-irys": "^0.9.1",
+    "@metaplex-foundation/umi-uploader-irys": "^0.10.0-beta.0",
     "@solana/spl-token": "^0.3.9",
-    "@solana/web3.js": "^1.87.6",
+    "@solana/web3.js": "^1.95.4",
     "@types/node": "^20.9.3",
     "@types/prompt": "^1.1.8",
     "bs58": "^5.0.0",
